# cpp-medical-logs

./: .gitignore  CMakeLists.txt  README.md  config.json  doctor.h  index.html  main.cpp  patient.h  patient_logs.json  styles.css  user.h
controllers/: AuthController.cpp  AuthController.h  DoctorController.cpp  DoctorController.h  PatientController.cpp  PatientController.h
data/: doctor_credential.json  patient_credential.json
docs/: flowchart.tex
frontend/: app.js  index.html  readme.md  styles.css
include/: AuthManager.h  Doctor.h  MedicalLogManager.h  Patient.h  User.h
static/: index.html
static/css/: styles.css
static/js/: main.js
tools/: seed.cpp
